--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ a:hover { text-decoration:underline;}
 /* main */
 .main { padding:0; margin:0 auto;}
 /********** header **********/
-.blok_header { margin:0; padding:0;background-color:#ffffff}
+.blok_header { margin:0; padding:0;background-color:#2d3b84}
 .header { width:960px; margin:0 auto; padding:0;}
 
 
@@ -18,9 +18,9 @@ a:hover { text-decoration:underline;}
 .menu ul li.last {background:none;padding-right:0px;}
 .menu ul li a { float:left; margin:0; padding:12px 0; color:#43adc3; font:normal 16px Arial, Helvetica, sans-serif; text-decoration:none;}
 .menu ul li a span { padding:12px 7px; background:none;}
-.menu ul li a:hover { color:black;  /*background: url(images/r_menu.gif);*/}
+.menu ul li a:hover { color:#fff8e5;  /*background: url(images/r_menu.gif);*/}
 .menu ul li a:hover span {   /*background:url(images/l_menu.gif) no-repeat left;*/}
-.menu ul li a.active { color:black; /*background:url(images/r_menu.gif);*/}
+.menu ul li a.active { color:#fff8e5; /*background:url(images/r_menu.gif);*/}
 .menu ul li a.active span {   /*background:url(images/l_menu.gif) no-repeat left;*/}
 /* search */
 .search { padding:15px 0 5px 0; margin:0 auto; width:320px;}
