--- a/style.css
+++ b/style.css
@@ -76,13 +76,13 @@ a:hover { text-decoration:underline;}
 /*FBG2*/
 .FBG2 { background:#fff; border-top:1px solid #e6e6e6; margin:0; padding:0;}
 .FBG2_resize { width:575px; margin:0 auto; padding:20px 0px 0px 0px;}
-.FBG2_resize p { font: normal 11px Arial, Helvetica, sans-serif; color:#717171; padding:5px 2px 5px 5px; margin:0; line-height:1.8em;}
+.FBG2_resize p { font: normal 11px Arial, Helvetica, sans-serif; color:#717171; padding:0px 0px 0px 0px; margin:0; line-height:1.8em;}
 .FBG2_resize ul { list-style:none; margin:10px auto; padding:0;}
 .FBG2_resize li { background:url(images/ul_li.gif) left no-repeat; padding:3px 0 3px 15px; margin:0; font: normal 11px Arial, Helvetica, sans-serif; color:#717171; }
 .FBG2_resize a { color:#2a2a2a; font: bold 11px Arial, Helvetica, sans-serif;}
-.FBG2_resize h2 { font: bold 14px Arial, Helvetica, sans-serif; color:#2a2a2a; padding:5px; margin:0;}
-.FBG2_resize .contact {width:150px; float:left; margin:0; padding:10px 0px 10px 0px;}
-.FBG2_resize .left { width:180px; float:left; margin:0; padding:10px 20px 10px 0px;}
+.FBG2_resize h2 { font: bold 14px Arial, Helvetica, sans-serif; color:#2a2a2a; padding:5px 0px; margin:0;}
+.FBG2_resize .contact {width:150px; float:left; margin:0; padding:6px 0px 9px 23px;}
+.FBG2_resize .left { width:180px; float:left; margin:0; padding:9px 0px 0px 0px;}
 /* END_bloga*/
 /*************footer**********/
 .footer {padding:0;  margin:0; height: 210px; background-color:#2d3b84; }
